err/skarabaeus-server.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/skarabaeus_server'...
Compiling './lib/python3.5/site-packages/skarabaeus_server/application.py'...
***   File "./lib/python3.5/site-packages/skarabaeus_server/application.py", line 56
    except NotFound, exc:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/skarabaeus_server/controller.py'...
***   File "./lib/python3.5/site-packages/skarabaeus_server/controller.py", line 103
    except self.model.NotFound, exc:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/skarabaeus_server/plugins'...
Listing './lib/python3.5/site-packages/skarabaeus_server/resources'...
Listing './lib/python3.5/site-packages/skarabaeus_server/templates'...
Compiling './lib/python3.5/site-packages/skarabaeus_server/view.py'...
***   File "./lib/python3.5/site-packages/skarabaeus_server/view.py", line 76
    except TemplateException, exc:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/skarabaeus_server-0.7.egg-info'...
Listing './lib/python3.5/site-packages/skarabaeus_server_manager'...
Compiling './lib/python3.5/site-packages/skarabaeus_server_manager/__init__.py'...
***   File "./lib/python3.5/site-packages/skarabaeus_server_manager/__init__.py", line 16
    ('standalone.py', 0770),
                         ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/skarabaeus_server_manager/templates'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
